# Kiroku

./: Cargo.toml  README.md  build.rs
src/: boolean.pest  eval.rs  expr.rs  k_map.rs  logic_gates.rs  main.rs  parser.rs  truth_table.rs
