[package]
name = "kiroku"
version = "0.3.1"
edition = "2024"
authors = ["Vaishnav Sabari Girish forgamesonly684@gmail.com"]
license = "MIT"
description = "A Rust TUI tool to parse boolean expressions and generate truth tables, with K-Map and circuit visualization."
readme = "README.md"
homepage = "https://github.com/Vaishnav-Sabari-Girish/Kiroku"
repository = "https://github.com/Vaishnav-Sabari-Girish/Kiroku"
keywords = ["tui", "logic_gates", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
comfy-table = "7.1.4"
crossterm = "0.29.0"
itertools = "0.14.0"
pest = "2.8.1"
pest_derive = "2.8.1"
ratatui = "0.29.0"

[build-dependencies]
pest_generator = "2.8.1"
